--- a/Enhancement.ipynb
+++ b/Enhancement.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,30 +28,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Load   Wind   Hydro  Fossil/Biomass  Nuclear            Datetime\n",
-      "0  5215.0  284.0  5482.0           834.0   1164.0 2019-11-17 00:00:00\n",
-      "1  5177.0  279.0  5361.0           775.0   1164.0 2019-11-17 00:05:00\n",
-      "2  5180.0  274.0  5236.0           740.0   1164.0 2019-11-17 00:10:00\n",
-      "3  5166.0  266.0  5235.0           721.0   1163.0 2019-11-17 00:15:00\n",
-      "4  5163.0  260.0  5190.0           706.0   1165.0 2019-11-17 00:20:00\n",
+      "     DateTime_Measured  Total_Demand_KW\n",
+      "0  2019-12-08 15:45:00             1347\n",
+      "1  2019-12-08 15:30:00             1336\n",
+      "2  2019-12-08 15:15:00             1332\n",
+      "3  2019-12-08 15:00:00             1336\n",
+      "4  2019-12-08 14:45:00             1324\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2579 entries, 0 to 2578\n",
-      "Data columns (total 6 columns):\n",
-      "Load              2579 non-null float64\n",
-      "Wind              2579 non-null float64\n",
-      "Hydro             2579 non-null float64\n",
-      "Fossil/Biomass    2579 non-null float64\n",
-      "Nuclear           2579 non-null float64\n",
-      "Datetime          2579 non-null datetime64[ns]\n",
-      "dtypes: datetime64[ns](1), float64(5)\n",
-      "memory usage: 121.0 KB\n",
+      "RangeIndex: 97850 entries, 0 to 97849\n",
+      "Data columns (total 2 columns):\n",
+      "DateTime_Measured    97850 non-null object\n",
+      "Total_Demand_KW      97850 non-null int64\n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 1.5+ MB\n",
       "None\n"
      ]
     }
@@ -59,8 +55,8 @@
    "source": [
     "import pandas as pds\n",
     "\n",
-    "db = client.get_database(\"energy\")\n",
-    "collection = db.get_collection(\"energy\")\n",
+    "db = client.get_database(\"cityhallpower\")\n",
+    "collection = db.get_collection(\"cityhallpower\")\n",
     "data = list(collection.find())\n",
     "df = pds.DataFrame.from_records(data)    \n",
     "df.drop('_id', axis=1, inplace=True)\n",
@@ -11388,7 +11384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
