--- a/data/ETL_EDA.ipynb
+++ b/data/ETL_EDA.ipynb
@@ -2,84 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DateTime_Measured,Total_Demand_KW\n",
-      "2019-12-08 07:45:00,1340\n",
-      "2019-12-08 07:30:00,1336\n",
-      "2019-12-08 07:15:00,1355\n",
-      "2019-12-08 07:00:00,1336\n",
-      "2019-12-08 06:45:00,1336\n",
-      "2019-12-08 06:30:00,1332\n",
-      "2019-12-08 06:15:00,1363\n",
-      "2019-12-08 06:00:00,1190\n",
-      "2019-12-08 05:45:00,1048\n",
-      "2019-12-08 05:30:00,1056\n",
-      "2019-12-08 05:15:00,1044\n",
-      "2019-12-08 05:00:00,1036\n",
-      "2019-12-08 04:45:00,1040\n",
-      "2019-12-08 04:30:00,1044\n",
-      "2019-12-08 04:15:00,1044\n",
-      "2019-12-08 04:00:00,1048\n",
-      "2019-12-08 03:45:00,1040\n",
-      "2019-12-08 03:30:00,1036\n",
-      "2019-12-08 03:15:00,1044\n",
-      "2019-12-08 03:00:00,1036\n",
-      "2019-12-08 02:45:00,1052\n",
-      "2019-12-08 02:30:00,1044\n",
-      "2019-12-08 02:15:00,1040\n",
-      "2019-12-08 02:00:00,1040\n",
-      "2019-12-08 01:45:00,1048\n",
-      "2019-12-08 01:30:00,1036\n",
-      "2019-12-08 01:15:00,1048\n",
-      "2019-12-08 01:00:00,1048\n",
-      "2019-12-08 00:45:00,1048\n",
-      "2019-12-08 00:30:00,1044\n",
-      "2019-12-08 00:15:00,1048\n",
-      "2019-12-08 00:00:00,1052\n",
-      "2019-12-07 23:45:00,1048\n",
-      "2019-12-07 23:30:00,1052\n",
-      "2019-12-07 23:15:00,1071\n",
-      "2019-12-07 23:00:00,1063\n",
-      "2019-12-07 22:45:00,1059\n",
-      "2019-12-07 22:30:00,1071\n",
-      "2019-12-07 22:15\n",
+      "<class 'requests.models.Response'>\n",
+      "{\"help\": \"https://data.boston.gov/api/3/action/help_show?name=datastore_search\", \"success\": true, \"result\": {\"include_total\": true, \"resource_id\": \"f123e65d-dc0e-4c83-9348-ed46fec498c0\", \"fields\": [{\"type\": \"int\", \"id\": \"_id\"}, {\"type\": \"text\", \"id\": \"DateTime_Measured\"}, {\"type\": \"text\", \"id\": \"Total_Demand_KW\"}], \"records_format\": \"objects\", \"records\": [{\"_id\": 1, \"Total_Demand_KW\": \"1347\", \"DateTime_Measured\": \"2019-12-08 15:45:00\"}, {\"_id\": 2, \"Total_Demand_KW\": \"1336\", \"DateTime_Measured\": \"2019-12-08 15:30:00\"}, {\"_id\": 3, \"Total_Demand_KW\": \"1332\", \"DateTime_Measured\": \"2019-12-08 15:15:00\"}, {\"_id\": 4, \"Total_Demand_KW\": \"1336\", \"DateTime_Measured\": \"2019-12-08 15:00:00\"}, {\"_id\": 5, \"Total_Demand_KW\": \"1324\", \"DateTime_Measured\": \"2019-12-08 14:45:00\"}, {\"_id\": 6, \"Total_Demand_KW\": \"1328\", \"DateTime_Measured\": \"2019-12-08 14:30:00\"}, {\"_id\": 7, \"Total_Demand_KW\": \"1324\", \"DateTime_Measured\": \"2019-12-08 14:15:00\"}, {\"_id\": 8, \"Total_Demand_KW\": \"1328\", \"DateTime_Measured\": \"2\n",
       "...\n",
-      "2016-10-27 14:15:00,1720\n",
-      "2016-10-27 14:00:00,1735\n",
-      "2016-10-27 13:45:00,1708\n",
-      "2016-10-27 13:30:00,1731\n",
-      "2016-10-27 13:15:00,1728\n",
-      "2016-10-27 13:00:00,1701\n",
-      "2016-10-27 12:45:00,1712\n",
-      "2016-10-27 12:30:00,1712\n",
-      "2016-10-27 12:15:00,1720\n",
-      "2016-10-27 12:00:00,1731\n",
-      "2016-10-27 11:45:00,1720\n",
-      "2016-10-27 11:30:00,1728\n",
-      "2016-10-27 11:15:00,1751\n",
-      "2016-10-27 11:00:00,1758\n",
-      "2016-10-27 10:45:00,1743\n",
-      "2016-10-27 10:30:00,1739\n",
-      "2016-10-27 10:15:00,1724\n",
-      "2016-10-27 10:00:00,1731\n",
-      "2016-10-27 09:45:00,1724\n",
-      "2016-10-27 09:30:00,1716\n",
-      "\n"
+      ":45:00\"}, {\"_id\": 98, \"Total_Demand_KW\": \"1336\", \"DateTime_Measured\": \"2019-12-07 15:30:00\"}, {\"_id\": 99, \"Total_Demand_KW\": \"1324\", \"DateTime_Measured\": \"2019-12-07 15:15:00\"}, {\"_id\": 100, \"Total_Demand_KW\": \"1340\", \"DateTime_Measured\": \"2019-12-07 15:00:00\"}], \"limit\": 100, \"_links\": {\"start\": \"/api/3/action/datastore_search?resource_id=f123e65d-dc0e-4c83-9348-ed46fec498c0\", \"next\": \"/api/3/action/datastore_search?offset=100&resource_id=f123e65d-dc0e-4c83-9348-ed46fec498c0\"}, \"total\": 97898}}\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "\n",
-    "url ='https://og-production-open-data-bostonma-892364687672.s3.amazonaws.com/resources/f123e65d-dc0e-4c83-9348-ed46fec498c0/tmpke4utrxy.csv?Signature=UAjyK0cDg%2BFiT22SGIeHlr12eQ8%3D&Expires=1575837619&AWSAccessKeyId=AKIAJJIENTAPKHZMIPXQ'\n",
+    "url ='https://data.boston.gov/api/3/action/datastore_search?resource_id=f123e65d-dc0e-4c83-9348-ed46fec498c0'\n",
     "req = requests.get(url, timeout=0.5)\n",
     "req.raise_for_status()\n",
+    "print(type(req))\n",
     "text = req.text\n",
     "print(text[:1000])\n",
     "print('...')\n",
@@ -88,106 +31,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DateTime_Measured</th>\n",
-       "      <th>Total_Demand_KW</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2019-12-08 07:45:00</td>\n",
-       "      <td>1340</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2019-12-08 07:30:00</td>\n",
-       "      <td>1336</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019-12-08 07:15:00</td>\n",
-       "      <td>1355</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2019-12-08 07:00:00</td>\n",
-       "      <td>1336</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019-12-08 06:45:00</td>\n",
-       "      <td>1336</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     DateTime_Measured  Total_Demand_KW\n",
-       "0  2019-12-08 07:45:00             1340\n",
-       "1  2019-12-08 07:30:00             1336\n",
-       "2  2019-12-08 07:15:00             1355\n",
-       "3  2019-12-08 07:00:00             1336\n",
-       "4  2019-12-08 06:45:00             1336"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas\n",
-    "from io import StringIO\n",
-    "\n",
-    "df = pandas.read_csv(StringIO(text))\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pymongo\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/23/23/7666537adafcd232c88c156aa9382c859791d79bf12094005e009c2b6a3d/pymongo-3.9.0-cp37-cp37m-manylinux1_x86_64.whl (447kB)\n",
-      "\u001b[K     |████████████████████████████████| 450kB 2.7MB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: pymongo\n",
-      "Successfully installed pymongo-3.9.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "[{\"_id\": 1, \"Total_Demand_KW\": \"1347\", \"DateTime_Measured\": \"2019-12-08 15:45:00\"}, {\"_id\": 2, \"Total_Demand_KW\": \"1336\", \"DateTime_Measured\": \"2019-12-08 15:30:00\"}, {\"_id\": 3, \"Total_Demand_KW\": \"1332\", \"DateTime_Measured\": \"2019-12-08 15:15\n"
      ]
     }
    ],
    "source": [
-    "pip install pymongo"
+    "import pandas\n",
+    "from io import StringIO\n",
+    "print(text[357:600])\n",
+    "# df = pandas.read_csv(StringIO(text))\n",
+    "# df.head()"
    ]
   },
   {
