Weather data pt2

--- a/src/data_creation_weather.ipynb
+++ b/src/data_creation_weather.ipynb
@@ -58,6 +58,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_csv = boston_weather.to_csv (r'../data/Processed_Data.csv', index = None, header = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_csv = boston_weather[['Date/Time','TAVG']].to_csv (r'../data/Date_Temp_Data.csv', index = None, header = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
