Evon etl, vis update 2

--- a/Enhancement.ipynb
+++ b/Enhancement.ipynb
@@ -29,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -61,8 +63,17 @@
     "df = pds.DataFrame.from_records(data)    \n",
     "df.drop('_id', axis=1, inplace=True)\n",
     "print(df.head())\n",
-    "print(df.info())"
+    "print(df.info())\n",
+    "df2 = pds.read_csv('data/Date_Temp_Data.csv')\n",
+    "print(df2.head())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
